--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
 	"plugins": ["react"],
 	"rules": {
 		"indent": 0, //["error", "tab"]
-		"linebreak-style": ["error", "unix"],
+		"linebreak-style": ["error", "windows"],
 		"quotes": ["error", "double"],
 		"semi": ["error", "always"],
 		"react/prop-types": 0, // disabled
